@@ -24,6 +24,8 @@ v1.2.1
 ! imdb::runtimes(), imdb::sountrack(), and mpaa_reason() was broken
 ! imdb_person::filmograf was broken due to an inserted onClick() on IMDB.COM
 * imdb_person::movies_actress() was causing false alert in tests
+! fixed the imdb::trailers() method. Note that IMDB now only lists their own
+  videos, so the imdb_trailers class is (currently) useless.
 
 v1.2.0 (04.10.2009)
 -------------------
